.antlr/hoaParser.py
# Generated from d:\file\dev\hk222\ppl\pplasm\hoa.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class hoaParser ( Parser ):

    grammarFileName = "hoa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'='", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "';'", "':'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "AND", "OR", "NOT", "EQUAL", 
                      "NOT_EQUAL", "LESS", "LESS_EQUAL", "GREATER", "GREATER_EQUAL", 
                      "CONCAT", "ASSIGN", "LB", "RB", "LSB", "RSB", "LCB", 
                      "RCB", "SEMI", "COLON", "COMMA", "DOT", "ID", "INT_LIT", 
                      "FLOAT_LIT", "BOOL_LIT", "STRING_LIT", "WS", "BLOCK_CMT", 
                      "LINE_CMT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_typ = 2
    RULE_atomic_typ = 3
    RULE_func_typ = 4
    RULE_vardecl = 5
    RULE_fullformat = 6
    RULE_idlist = 7
    RULE_array_typ = 8
    RULE_dimension = 9
    RULE_array_literal = 10
    RULE_exprlist = 11
    RULE_exprlist1 = 12
    RULE_array_index = 13
    RULE_index_expr = 14
    RULE_funcdecl = 15
    RULE_funcpro = 16
    RULE_funcbody = 17
    RULE_paralist = 18
    RULE_paralist1 = 19
    RULE_para = 20
    RULE_funccall = 21
    RULE_literal = 22
    RULE_sub_expr = 23
    RULE_expr = 24
    RULE_expr1 = 25
    RULE_expr2 = 26
    RULE_expr3 = 27
    RULE_expr4 = 28
    RULE_expr5 = 29
    RULE_expr6 = 30
    RULE_expr7 = 31
    RULE_stmt = 32
    RULE_assign_stmt = 33
    RULE_if_stmt = 34
    RULE_for_stmt = 35
    RULE_while_stmt = 36
    RULE_do_while_stmt = 37
    RULE_break_stmt = 38
    RULE_continue_stmt = 39
    RULE_return_stmt = 40
    RULE_call_stmt = 41
    RULE_block_stmt = 42
    RULE_block_body = 43

    ruleNames =  [ "program", "decl", "typ", "atomic_typ", "func_typ", "vardecl", 
                   "fullformat", "idlist", "array_typ", "dimension", "array_literal", 
                   "exprlist", "exprlist1", "array_index", "index_expr", 
                   "funcdecl", "funcpro", "funcbody", "paralist", "paralist1", 
                   "para", "funccall", "literal", "sub_expr", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "stmt", "assign_stmt", "if_stmt", "for_stmt", "while_stmt", 
                   "do_while_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "call_stmt", "block_stmt", "block_body" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONTINUE=18
    OF=19
    INHERIT=20
    ARRAY=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    AND=27
    OR=28
    NOT=29
    EQUAL=30
    NOT_EQUAL=31
    LESS=32
    LESS_EQUAL=33
    GREATER=34
    GREATER_EQUAL=35
    CONCAT=36
    ASSIGN=37
    LB=38
    RB=39
    LSB=40
    RSB=41
    LCB=42
    RCB=43
    SEMI=44
    COLON=45
    COMMA=46
    DOT=47
    ID=48
    INT_LIT=49
    FLOAT_LIT=50
    BOOL_LIT=51
    STRING_LIT=52
    WS=53
    BLOCK_CMT=54
    LINE_CMT=55
    ILLEGAL_ESCAPE=56
    UNCLOSE_STRING=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(hoaParser.DeclContext,0)


        def EOF(self):
            return self.getToken(hoaParser.EOF, 0)

        def getRuleIndex(self):
            return hoaParser.RULE_program




    def program(self):

        localctx = hoaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.decl()
            self.state = 89
            self.match(hoaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(hoaParser.DeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(hoaParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(hoaParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return hoaParser.RULE_decl




    def decl(self):

        localctx = hoaParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 91
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 92
                    self.funcdecl()
                    pass


                self.state = 95
                self.decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 97
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 98
                    self.funcdecl()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(hoaParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(hoaParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(hoaParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(hoaParser.STRING, 0)

        def AUTO(self):
            return self.getToken(hoaParser.AUTO, 0)

        def array_typ(self):
            return self.getTypedRuleContext(hoaParser.Array_typContext,0)


        def getRuleIndex(self):
            return hoaParser.RULE_typ




    def typ(self):

        localctx = hoaParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typ)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [hoaParser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(hoaParser.INTEGER)
                pass
            elif token in [hoaParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(hoaParser.FLOAT)
                pass
            elif token in [hoaParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.match(hoaParser.BOOLEAN)
                pass
            elif token in [hoaParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.match(hoaParser.STRING)
                pass
            elif token in [hoaParser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.match(hoaParser.AUTO)
                pass
            elif token in [hoaParser.ARRAY]:
                self.enterOuterAlt(localctx, 6)
                self.state = 108
                self.array_typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(hoaParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(hoaParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(hoaParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(hoaParser.STRING, 0)

        def getRuleIndex(self):
            return hoaParser.RULE_atomic_typ




    def atomic_typ(self):

        localctx = hoaParser.Atomic_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atomic_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << hoaParser.BOOLEAN) | (1 << hoaParser.FLOAT) | (1 << hoaParser.INTEGER) | (1 << hoaParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(hoaParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(hoaParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(hoaParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(hoaParser.STRING, 0)

        def AUTO(self):
            return self.getToken(hoaParser.AUTO, 0)

        def VOID(self):
            return self.getToken(hoaParser.VOID, 0)

        def array_typ(self):
            return self.getTypedRuleContext(hoaParser.Array_typContext,0)


        def getRuleIndex(self):
            return hoaParser.RULE_func_typ




    def func_typ(self):

        localctx = hoaParser.Func_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_typ)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [hoaParser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(hoaParser.INTEGER)
                pass
            elif token in [hoaParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(hoaParser.FLOAT)
                pass
            elif token in [hoaParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(hoaParser.BOOLEAN)
                pass
            elif token in [hoaParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.match(hoaParser.STRING)
                pass
            elif token in [hoaParser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.match(hoaParser.AUTO)
                pass
            elif token in [hoaParser.VOID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 118
                self.match(hoaParser.VOID)
                pass
            elif token in [hoaParser.ARRAY]:
                self.enterOuterAlt(localctx, 7)
                self.state = 119
                self.array_typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(hoaParser.IdlistContext,0)


        def COLON(self):
            return self.getToken(hoaParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(hoaParser.TypContext,0)


        def SEMI(self):
            return self.getToken(hoaParser.SEMI, 0)

        def fullformat(self):
            return self.getTypedRuleContext(hoaParser.FullformatContext,0)


        def getRuleIndex(self):
            return hoaParser.RULE_vardecl




    def vardecl(self):

        localctx = hoaParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.idlist()
                self.state = 123
                self.match(hoaParser.COLON)
                self.state = 124
                self.typ()
                self.state = 125
                self.match(hoaParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.fullformat()
                self.state = 128
                self.match(hoaParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FullformatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(hoaParser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(hoaParser.COMMA)
            else:
                return self.getToken(hoaParser.COMMA, i)

        def fullformat(self):
            return self.getTypedRuleContext(hoaParser.FullformatContext,0)


        def expr(self):
            return self.getTypedRuleContext(hoaParser.ExprContext,0)


        def COLON(self):
            return self.getToken(hoaParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(hoaParser.TypContext,0)


        def ASSIGN(self):
            return self.getToken(hoaParser.ASSIGN, 0)

        def getRuleIndex(self):
            return hoaParser.RULE_fullformat




    def fullformat(self):

        localctx = hoaParser.FullformatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fullformat)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(hoaParser.ID)
                self.state = 133
                self.match(hoaParser.COMMA)
                self.state = 134
                self.fullformat()
                self.state = 135
                self.match(hoaParser.COMMA)
                self.state = 136
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(hoaParser.ID)
                self.state = 139
                self.match(hoaParser.COLON)
                self.state = 140
                self.typ()
                self.state = 141
                self.match(hoaParser.ASSIGN)
                self.state = 142
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(hoaParser.ID, 0)

        def COMMA(self):
            return self.getToken(hoaParser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(hoaParser.IdlistContext,0)


        def getRuleIndex(self):
            return hoaParser.RULE_idlist




    def idlist(self):

        localctx = hoaParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(hoaParser.ID)
                self.state = 147
                self.match(hoaParser.COMMA)
                self.state = 148
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(hoaParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(hoaParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(hoaParser.LSB, 0)

        def dimension(self):
            return self.getTypedRuleContext(hoaParser.DimensionContext,0)


        def RSB(self):
            return self.getToken(hoaParser.RSB, 0)

        def OF(self):
            return self.getToken(hoaParser.OF, 0)

        def atomic_typ(self):
            return self.getTypedRuleContext(hoaParser.Atomic_typContext,0)


        def getRuleIndex(self):
            return hoaParser.RULE_array_typ




    def array_typ(self):

        localctx = hoaParser.Array_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(hoaParser.ARRAY)
            self.state = 153
            self.match(hoaParser.LSB)
            self.state = 154
            self.dimension()
            self.state = 155
            self.match(hoaParser.RSB)
            self.state = 156
            self.match(hoaParser.OF)
            self.state = 157
            self.atomic_typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(hoaParser.INT_LIT, 0)

        def COMMA(self):
            return self.getToken(hoaParser.COMMA, 0)

        def dimension(self):
            return self.getTypedRuleContext(hoaParser.DimensionContext,0)


        def getRuleIndex(self):
            return hoaParser.RULE_dimension




    def dimension(self):

        localctx = hoaParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimension)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(hoaParser.INT_LIT)
                self.state = 160
                self.match(hoaParser.COMMA)
                self.state = 161
                self.dimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(hoaParser.INT_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(hoaParser.LCB, 0)

        def exprlist(self):
            return self.getTypedRuleContext(hoaParser.ExprlistContext,0)


        def RCB(self):
            return self.getToken(hoaParser.RCB, 0)

        def getRuleIndex(self):
            return hoaParser.RULE_array_literal




    def array_literal(self):

        localctx = hoaParser.Array_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(hoaParser.LCB)
            self.state = 166
            self.exprlist()
            self.state = 167
            self.match(hoaParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprlist1(self):
            return self.getTypedRuleContext(hoaParser.Exprlist1Context,0)


        def getRuleIndex(self):
            return hoaParser.RULE_exprlist




    def exprlist(self):

        localctx = hoaParser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprlist)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [hoaParser.FALSE, hoaParser.TRUE, hoaParser.SUB, hoaParser.NOT, hoaParser.LB, hoaParser.LCB, hoaParser.ID, hoaParser.INT_LIT, hoaParser.FLOAT_LIT, hoaParser.STRING_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.exprlist1()
                pass
            elif token in [hoaParser.RB, hoaParser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exprlist1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(hoaParser.ExprContext,0)


        def COMMA(self):
            return self.getToken(hoaParser.COMMA, 0)

        def exprlist1(self):
            return self.getTypedRuleContext(hoaParser.Exprlist1Context,0)


        def getRuleIndex(self):
            return hoaParser.RULE_exprlist1




    def exprlist1(self):

        localctx = hoaParser.Exprlist1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprlist1)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.expr()
                self.state = 174
                self.match(hoaParser.COMMA)
                self.state = 175
                self.exprlist1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_indexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(hoaParser.ID, 0)

        def LSB(self):
            return self.getToken(hoaParser.LSB, 0)

        def index_expr(self):
            return self.getTypedRuleContext(hoaParser.Index_exprContext,0)


        def RSB(self):
            return self.getToken(hoaParser.RSB, 0)

        def getRuleIndex(self):
            return hoaParser.RULE_array_index




    def array_index(self):

        localctx = hoaParser.Array_indexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_array_index)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(hoaParser.ID)
            self.state = 181
            self.match(hoaParser.LSB)
            self.state = 182
            self.index_expr()
            self.state = 183
            self.match(hoaParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(hoaParser.ExprContext,0)


        def COMMA(self):
            return self.getToken(hoaParser.COMMA, 0)

        def index_expr(self):
            return self.getTypedRuleContext(hoaParser.Index_exprContext,0)


        def getRuleIndex(self):
            return hoaParser.RULE_index_expr




    def index_expr(self):
